<resources>
    <string name="foto_principal" translatable="false" />
    <string name="imagem_filme" translatable="false" />
    <string name="milhoes" translatable="false">Mi</string>
    <string name="dollar" translatable="false">$</string>
    <string name="valor_zero" translatable="false">0.0</string>
    <string name="poster_transition" translatable="false">poster_transition</string>
    <string name="person">Profile</string>
    <string name="filmes_main" translatable="false">filmes_main</string>
    <string name="tvshow_main" translatable="false">tvshow_main</string>
    <string name="populares">Most Popular</string>
    <string name="email" translatable="false">icarornunes@gmail.com</string>
    <string name="email_tx" translatable="false">E-Mail</string>
    <string name="infor_tmdb" translatable="false">"This product uses the TMDb API but is not endorsed or certified by TMDb."</string>
    <string name="app_name" translatable="false">PopCorn Show</string>
    <string name="about">About</string>
    <string name="air_date">On the Air</string>
    <string name="apelido">Nickname:</string>
    <string name="author">Author:</string>
    <string name="avaliados">Evaluated</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="classificar">To Rank</string>
    <string name="classificar_visto" translatable="false">✔</string>
    <string name="collecion_off">No collection</string>
    <string name="compartilhar_filme">Share Tvshow</string>
    <string name="compartilhar_tvshow">Sharing Tvshows</string>
    <string name="configuracoes">Settings</string>
    <string name="criado">Created by:</string>
    <string name="criar_login_popcorn">Create login PopCorn</string>
    <string name="director">Directed</string>
    <string name="elenco">Cast</string>
    <string name="em_breve">Coming Soon</string>
    <string name="ended">Finished</string>
    <string name="epsodio">Episode</string>
    <string name="erro_na_gravacao_imagem">Error in the recording of the image in memory. Try again.</string>
    <string name="excluir_filme">Delete Movie ?</string>
    <string name="excluir_tvshow">Delete Tvshow ?</string>
    <string name="falha_rated">Failure classification</string>
    <string name="favorite">Favorites</string>
    <string name="fazer_login">Login</string>
    <string name="filme">Movies</string>
    <string name="filme_add_favorite">Movie added to Favorites</string>
    <string name="filme_add_watchlist">Added to \"Watch Later\"</string>
    <string name="filme_nao_lancado">Film has not yet been released</string>
    <string name="filme_rated">Movie Rated</string>
    <string name="filme_remove">Movie Removed</string>
    <string name="filme_remove_favorite">Movie removed from the Favorites list</string>
    <string name="home">Main</string>
    <string name="hora">H</string>
    <string name="horas">H</string>
    <string name="idioma_padrao">Language Android</string>
    <string name="idioma_padrao_subtitle">English language contains more information on TMDB. If you do not use the standard Android, it will be used.</string>
    <string name="imagem_person">Photos</string>
    <string name="in_production">In Producação</string>
    <string name="infor_app">Information Property on the App</string>
    <string name="informacoes">Information</string>
    <string name="login">Login:</string>
    <string name="mil">Thousand</string>
    <string name="milhoes_budget">Millions</string>
    <string name="minutos">mins</string>
    <string name="no">No</string>
    <string name="no_budget">There is no budget information</string>
    <string name="no_internet">Without Internet</string>
    <string name="no_message">No comments</string>
    <string name="no_site">No Official site</string>
    <string name="no_vote">No Vote</string>
    <string name="nota">Note:</string>
    <string name="now_playing">Now Playing</string>
    <string name="não_informado" translatable="false">N/A</string>
    <string name="orcamento_budget">Budget</string>
    <string name="original_title">Original title:</string>
    <string name="oscar">Oscar Winners</string>
    <string name="password">Password</string>
    <string name="person_rated">Popular people</string>
    <string name="person_vote">People voted</string>
    <string name="pesquisar_internet">On the Google Play</string>
    <string name="popularity">Popularity:</string>
    <string name="por_tras_camera_filme">Film Production</string>
    <string name="por_tras_camera_tvshow">Tvshow Production</string>
    <string name="poster_filme">Movie Poster</string>
    <string name="producao">Production</string>
    <string name="production_countries">Country Producer:</string>
    <string name="produtora">Developer:</string>
    <string name="quero_assistir">I want to watch</string>
    <string name="rated_googleplay">Review on Google Play.</string>
    <string name="recomendacao">Recommendation</string>
    <string name="retry">Repeat</string>
    <string name="returnin_series">Renewed</string>
    <string name="sair">Leave</string>
    <string name="search">Search</string>
    <string name="search_empty">No Search Result</string>
    <string name="sem_biografia">No Biography</string>
    <string name="sem_data">Undated</string>
    <string name="sem_filmes">No Movies</string>
    <string name="sem_fotos">Without Pictures</string>
    <string name="sem_nome">Without information</string>
    <string name="sem_nota">No Note</string>
    <string name="sem_sinopse">No Synopsis</string>
    <string name="sem_tvshow">No Tvshow</string>
    <string name="similares">Similar</string>
    <string name="spoken_languages">Idioma Original:</string>
    <string name="status">Status:</string>
    <string name="suas_listas">Your Lists</string>
    <string name="tempo_nao_informado">Time N/A</string>
    <string name="temporada">Season: </string>
    <string name="temporadas">Seasons</string>
    <string name="text_logoff_dialog">After logging out, it will not be possible to interact with the application.</string>
    <string name="title_logoff_dialog">Log out of PopCorn Show?</string>
    <string name="toast_salvar_imagem">Image saved in the folder of the application</string>
    <string name="today">On Tv Today</string>
    <string name="top_rated">Best Evaluated</string>
    <string name="tvshow">TvShows</string>
    <string name="tvshow_add_favorite">Tvshow added to Favorites</string>
    <string name="tvshow_nao_lancado">Tvshow not yet released</string>
    <string name="tvshow_ep_rated">Epsodio Rated</string>
    <string name="tvshow_remove_favorite">Tvshow removed from the Favorites list</string>
    <string name="upcoming">Coming soon</string>
    <string name="usuario">User\'s TMDB</string>
    <string name="ver_imdb">See IMDB</string>
    <string name="ver_no_app">See PopCorn</string>
    <string name="ver_tmdb">See TMDB</string>
    <string name="vote_average">Vote Average</string>
    <string name="writer">Written</string>
    <string name="sem_informacao_colletion">No information about the collection</string>
    <string name="erro_ainda_sem_imagem">Still no image, try again.</string>
    <string name="random" translatable="false">Random</string>
    <string name="seguindo">Following</string>
    <string name="seguir">Follow</string>
    <string name="marcado_assistido">Marked as watched. Rate the episode.</string>
    <string name="marcado_nao_assistido">Marked as unassisted.</string>
    <string name="marcado_assistido_temporada">Marked as watched.</string>
    <string name="marcado_nao_assistido_temporada">Marked as unassisted.</string>
    <string name="salvando">Saving…</string>
    <string name="tvshow_watch_remove">Tvshow removed from watchlist</string>
    <string name="tvshow_remove_rated">Removed note from Tvshow</string>
    <string name="adicionar_favorite">Add to Favorites</string>
    <string name="remover_favorite">Remove from favorites</string>
    <string name="adicionar_rated">Add to Classifieds</string>
    <string name="adicionar_watch">Add to Watchlist</string>
    <string name="remover_rated">Remove from Classifieds</string>
    <string name="remover_watch">Remove from Watchlist</string>
    <string name="sem_login">User not logged</string>
    <string name="title_intro_1">PopCorn Show</string>
    <string name="subtitle_intro_1">Welcome to the PopCorn Show.\n\nCheck out the latest news</string>
    <string name="title_intro_2">News</string>
    <string name="subtitle_intro_2">Several links to sites around the world talking about the movie / tvshow</string>
    <string name="title_intro_3">Following</string>
    <string name="subtitle_intro_3">Our system can now track whether the movie, tvshow or artist is in the Netflix catalog</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="bt_signin">Sign In</string>
    <string name="anonymous">Anonymous</string>
    <string name="user_email" translatable="false">E-mail:</string>
    <string name="uid" translatable="false">Uid:</string>
    <string name="bt_reset_password">Reset Password</string>
    <string name="bt_desativar">Deactivate Account</string>
    <string name="nova_senha">New Password</string>
    <string name="repetir_nova_senha">Repeat Password</string>
    <string name="ok" translatable="false">OK</string>
    <string name="falha_reset_senha">Failed to change password. Please try logging again before trying.</string>
    <string name="reset_senha_ok">Password changed</string>
    <string name="logar_como_anonimo">Login as Anonymous</string>
    <string name="anonimo_alerta">This type of login is not secure. You may lose everything if the application fails. We recommend creating a login.</string>
    <string name="vincular_login_popcorn">Link to another login</string>
    <string name="email_invalido">Invalid email</string>
    <string name="email_recuperacao_enviado">Send password reset email</string>
    <string name="deletar_conta">Delete account?</string>
    <string name="deletar_conta_txt">Would you like to delete your account? You have lost all account information.  It will not be possible to recover.</string>
    <string name="conta_deletada">Deleted account</string>
    <string name="falha_delete_conta">Error while trying to delete account. You must have logged in to this process recently.</string>
    <string name="id_oscar" translatable="false">28</string>
    <string name="calendar">Calendar</string>
    <string name="no_epsodio">Nameless</string>
    <string name="proximos">Upcoming</string>
    <string name="new_segiundo">New</string>
    <string name="msg_parar_seguir">If you stop following, you lose all the progress of the Tvshow</string>
    <string name="title_delete">Stop following the Tvshow?</string>
    <string name="erro_seguir">Error, please try again</string>
    <string name="subtitle_intro_5">Create your login and enjoy</string>
    <string name="procurar">Search</string>
    <string name="ops">Oops. something wrong</string>
    <string name="app_code" translatable="false">q2p5q/</string>
    <string name="notificacao">Notification</string>
    <string name="notificacao_summary">Get notification</string>
    <string name="ajuda_desenvolvimento">Development</string>
    <string name="twitter_text" translatable="false">Twitter</string>
    <string name="novidades_title">News</string>
    <string name="novidades_text">** Your reviews are now sent to TMDB. \n\n (With great powers comes great responsibilities) \n\n ** Search now brings image in search **</string>
    <string name="star_avaliados">Evaluation</string>
    <string name="budget">Budget</string>
    <string name="homepage" translatable="false">Homepager</string>
    <string name="ver_netflix">See Netflix</string>
    <string name="procurar_netflix">Netflix</string>
    <string name="alerta_spoiler">Warning</string>
</resources>