<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="all"
        android:visible="true">

        <item
            android:id="@+id/menu_drav_home"
            android:checkable="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/home" />

        <item
            android:id="@+id/menu_drav_person"
            android:checkable="true"
            android:icon="@drawable/mickey_mouse"
            android:title="@string/person_rated" />

        <item
            android:id="@+id/menu_drav_oscar"
            android:checkable="true"
            android:icon="@drawable/oscar"
            android:title="@string/oscar" />

        <item
            android:id="@+id/menu_drav_surpresa"
            android:checkable="true"
            android:icon="@drawable/dado"
            android:title="@string/random" />

        <!--<item-->
            <!--android:id="@+id/menu_drav_netflix"-->
            <!--android:checkable="true"-->
            <!--android:icon="@drawable/dado"-->
            <!--android:title="@string/random" />-->

    </group>

    <group
        android:id="@+id/menu_drav_logado"
        android:checkableBehavior="single"
        android:visible="false">
        <!-- Todos os item Checked?! -->

        <item
            android:id="@+id/seguindo"
            android:icon="@drawable/seguindo"
            android:title="@string/seguindo" />

        <item
            android:id="@+id/favorite"
            android:icon="@drawable/icon_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/rated"
            android:icon="@drawable/icon_avaliado"
            android:title="@string/avaliados" />
        <item
            android:id="@+id/watchlist"
            android:icon="@drawable/icon_agenda"
            android:title="@string/quero_assistir" />

    </group>

        <!-- WebView com informações sobre o livro -->
        <!-- Tela de configurações -->
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/configuracoes" />

</menu>