<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/trade_size_dp_18"
    android:paddingRight="@dimen/trade_size_dp_18"
    android:paddingBottom="@dimen/trade_size_dp_10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nova_senha"
        android:textStyle="normal|bold"
        android:textSize="@dimen/trade_txt_size_sp_18"
        android:layout_marginLeft="@dimen/trade_size_dp_12"
        android:layout_marginTop="@dimen/trade_size_dp_10"
        android:textColor="@color/blue_main" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:layout_marginTop="@dimen/trade_size_dp_5">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@+id/login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/trade_size_dp_17"

            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repetir_nova_senha"
        android:textStyle="normal|bold"
        android:textSize="@dimen/trade_txt_size_sp_18"
        android:layout_marginStart="@dimen/trade_size_dp_12"
        android:textColor="@color/red"
        android:layout_marginLeft="@dimen/trade_size_dp_12" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repetir_pass"
        android:layout_marginTop="@dimen/trade_size_dp_5">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/login"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_marginTop="@dimen/trade_size_dp_17"

            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:padding="@dimen/trade_size_dp_3"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/trade_size_dp_3"
            android:layout_weight="1"
            android:background="@drawable/button_visto"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>