<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:srcCompat="@drawable/oculos_grande" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ed_email_recuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:hint="@string/email_tx"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_recuperar_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="@dimen/trade_size_dp_6"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/bt_recuperar_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_visto"
            android:padding="@dimen/trade_size_dp_6"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>