<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/trade_size_dp_15">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/oculos_grande" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/vincular_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/trade_size_dp_5">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="@dimen/trade_size_dp_21"
            android:ems="10"
            android:hint="@string/email_tx"

            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/criar_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/trade_size_dp_5">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/trade_size_dp_17"
            android:hint="@string/password"

            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/criar_repetir_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/trade_size_dp_5">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_marginTop="@dimen/trade_size_dp_17"
            android:ems="10"
            android:hint="@string/repetir_nova_senha"

            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/trade_size_dp_20">

        <Button
            android:id="@+id/bt_new_login_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/trade_size_dp_6"
            android:layout_marginLeft="@dimen/trade_size_dp_6"
            android:layout_marginRight="@dimen/trade_size_dp_6"
            android:layout_marginStart="@dimen/trade_size_dp_6"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/play_video"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/bt_new_login_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/trade_size_dp_6"
            android:layout_marginLeft="@dimen/trade_size_dp_6"
            android:layout_marginRight="@dimen/trade_size_dp_6"
            android:layout_marginStart="@dimen/trade_size_dp_6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:background="@drawable/button_visto"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>