<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activity.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_visto"
        android:padding="5dp"
        android:contentDescription="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pop"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:fontFamily="serif"
            android:shadowColor="@color/black_transparente"
            android:textColor="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Corn"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:fontFamily="serif"
            android:textColor="@color/red" />



    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/login"
        android:hint="@string/email_tx" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/pass"
        android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/bt_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:id="@+id/logar"

            android:textCursorDrawable="@drawable/button_visto"
            android:background="@drawable/button_visto" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recuperar_senha"
            android:layout_weight="1"
            android:text="@string/reset_password"
            android:gravity="left"
            android:textStyle="bold"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/criar_login"
            android:layout_weight="1"
            android:text="@string/criar_login_popcorn"
            android:gravity="right"
            android:textStyle="normal|bold|italic"
            android:clickable="true"
            tools:ignore="RtlHardcoded"
            android:onClick="onclick" />
        
        
        
    </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <Button
            android:text="FaceBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:id="@+id/facebook"
            />

    <Button
        android:text="@string/logar_como_anonimo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onclickMain" />

</LinearLayout>
